--- a/style.css
+++ b/style.css
@@ -1,92 +1,51 @@
-/*#tic-tac-toe .disable {
-  text-transform: uppercase;
-  font-size: 30px;
-  font-family: Georgia, "Times New Roman", Times, serif
-}
-
-
-
-#tic-tac-toe #game li {
-  float: left;
-  padding: 0;
-  list-style: none;
+body {
   text-align: center;
-  margin-bottom: 20px;
-  color: #fff;
-  height: 60px;
-  line-height: 60px;
+  background-color: #ffffcc;
+}
+h1 {
+  font-size: 100px;
+  color: orange;
+  font-weight: 300;
+}
+ul {
   font-size: 40px;
-  color: #ccc
+  opacity: 0.8
 }
 
-#tic-tac-toe #game li.disable {
-  color: #fff
+#matrix li {
+  padding: 3px;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  height: 80px;
+  line-height: 60px;
+  border-style: groove;
+  width: 10%;
+
 }
 
-#tic-tac-toe #game {
-  float: left;
-  padding: 0;
-  clear: both
+li:hover{
+  background: #e5e5b7;
+
+}
+.btn-success {
+  background: #595959;
 }
 
-.new_span {
-  width: 226px
+.btn-success:hover {
+  background: #808080;
 }
 
-#tic-tac-toe #reset {
-  padding: 5px 10px;
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+.btn-danger{
+  background: orange; 
   font-size: 20px;
-  clear: both;
-  cursor: pointer;
-  float: left;
-  text-align: center;
-  text-transform: uppercase;
-  outline: none;
-  width: 204px
+  
+}
+.btn-danger:hover {
+  background: purple;
+
 }
 
-.input-prepend span.pre_text {
-  width: 55px
+button {
+
 }
-
-.input-prepend .span1 {
-  width: 93px
-}
-
-.input-prepend {
-  margin-bottom: 10px
-}
-
-.clr {
-  clear: both;
-  height: 0
-}
-
-#tic-tac-toe h1 {
-  text-align: center;
-  font-size: 28px
-}
-
-#tic-tac-toe li {
-  background: none;
-  color: #000;
-}
-
-#tic-tac-toe {
-  width: 220px;
-  margin: 0 auto
-}
-
-.input-append .win_times {
-  background: #fff;
-  width: 101px
-}
-
-.input-append .win_text {
-  width: 52px
-}*/
-
-
-*/
